# cmake-f2py-template

./: .gitignore  README.md  script.py
template/: CMakeLists.txt
